backend almost completed

--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,21 @@
 PORT=3000
+
 DB_URI="mongodb://localhost:27017/JP"
 JWT_SECRET=joMeraManWoMeDaalSaqtiHuunHeHeHaHa
 JWT_EXPIRE=5d
 COOKIE_EXPIRE=5
+
+
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT=465
+SMTP_SERVICE="gmail"
+
+
+SMTP_MAIL="ritikapanjwani13@gmail.com"
+SMTP_PASSWORD=rlciapdunupyuymm
+
+Actual_SMTP_PASSWORD="Ritikapanjwani13@"
+
+
+YEH_JO_CHALA_HEE_NHI_SMTP_MAIL="fortestingpurposebyriti@gmail.com"
+KYUNKI_CHALNA_HEE_NAHI_CHAHTA_NA_SMTP_PASSWORD="Testing@123"
